--- a/foundations/01-css-methods/css/style.css
+++ b/foundations/01-css-methods/css/style.css
@@ -1,4 +1,8 @@
 div {
-   font-size: 50px;
-   font-family: sans-serif
+   font-size: 32px;
+   font-family: sans-serif;
+   color: white;
+   background-color: red;
+   text-align: center;
+   font-weight: bold;
 }
