--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,7 @@
 .header  {
+  display: flex;
+  padding: 10px;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
@@ -9,11 +12,24 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: auto
 }
 
 ul {
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 10px;
   /* this removes the dots on the list items*/
   list-style-type: none;
+}
+
+.left-links {
+  margin-right: auto;
+}
+
+.right-links {
+  margin-left: auto;
 }
 
 a {
