--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -19,6 +19,7 @@ body {
   font-weight: 900;
   display: flex;
   align-items: center;
+  padding: 0 16px;
 }
 
 .footer {
@@ -56,10 +57,6 @@ body {
   flex-wrap: wrap;
   padding: 32px;
   gap: 16px;
-}
-
-.title {
-  margin: 16px;
 }
 
 ul { 
